# Circle-batch-rendering

./: CMakeLists.txt  chat_prep.py  chat_prep.txt  combined_output.txt  maunal.txt  pom.txt
src/: 10.1.instancing.fs  10.1.instancing.vs  Boid.cpp  Boid.h  BoidsRenderer.h  Flock.h  glad.c  global.hpp  main  main.cpp  main2.cpp  mainGPU.cpp  mainGrid.cpp  mainbug.cpp  parameters.json
src/CPU/: Boid.cpp  Boid.h  BoidsRenderer.h  Flock.h
src/GPU/: BoidGPU.h  BoidGridKernel.cu  BoidKernel.cu  BoidsMemoryManagement.cu  FlockGPU.h  FlockGridGPU.h  Grid.cuh  Neighbours.cu  UniformSpatialGrid.cu  cuda_dependencies.cu  cuda_functions.h
